feat: HEX цвета, фикс бага барьера, GUI-редактор, PlaceholderAPI - ColorUtil: поддержка &#RRGGBB и #RRGGBB HEX цветов - ShopMenuListener: фикс бага взятия барьера (блокировка нижнего инвентаря + drag) - TraderShop: новый стиль меню с HEX градиентами и украшениями - TraderMenuGUI + MenuEditorListener: GUI-редактор /tradermenu - TraderPlaceholder: PlaceholderAPI плейсхолдеры %sudoru_*% - TraderMenuCommand: команда /tradermenu [id]